clang/test/BSC/Negative/Trait/GenericTrait/impl_trait_for_undefine_type2/impl_trait_for_undefine_type2.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F<T> {
  T foo(This* this);
};

int int::foo(int* this) {
  return 10;
}

_Impl _Trait F<int> for struct S; // expected-error {{function 'foo' in '_Trait F<int>' is not implemented for 'struct S'}}